# AGV-Project

./: Meetings Notes.docx  Project-Schedule.xlsx  README.md  Scrum Methodology.pptx
Code/: envGraph.py  readProducts.py  world.py
Code/Products Composition/: ComponentsDescription.xml
Code/Products_Composition/: ComponentsDescription.xml  ProductsDescription.xml
Code/examples/: LED_controller.py  MotorController.ino  VICON_reading.py  arduinoReadinng.ino  encoder_example
Code/examples/Motor_test/: Motor_test.ino
Documentation/: Robot Diagram.fzz
simulation/: CMakeLists.txt  package.xml
simulation/launch/: spawn.launch
simulation/models/: agv_model.config  agv_model.sdf
